--- a/css/main.scss
+++ b/css/main.scss
@@ -5,7 +5,9 @@ $primary-green: #204E4A;
 $primary-teal: #2D9378;
 $secondary-teal: #2CD3A9;
 $cursive-font: 'Yellowtail', cursive;
+$cursive-font2: 'Beth Ellen', cursive;
 $primary-font: 'Roboto', sans-serif;
+$primary-font2: 'Bebas Neue', cursive;
 
 
 html, body {
@@ -46,22 +48,48 @@ header {
         .nav__list {
             padding-left: 0;
             margin: 0;
+            font-size: 16px;
 
             &--item {
                 list-style-type: none;
+                padding: 5px 0;
             }
 
             &--link {
                 color: $primary;
                 transition: 0.2s;
                 text-decoration: none;
+                font-weight: 900;
+                text-transform: uppercase;
+                position: relative;
+
+                &:after {
+                    content: "";
+                    position: absolute;
+                    width: 100%;
+                    height: 2px;
+                    bottom: 0;
+                    left: 0;
+                    background-color: $secondary-teal;
+                    visibility: hidden;
+                    -webkit-transform: scaleX(0);
+                    transform: scaleX(0);
+                    -webkit-transition: all 0.3s ease-in-out 0s;
+                    transition: all 0.3s ease-in-out 0s;
+                }
+                
 
                 &:hover, 
                 &:focus {
                     color: $secondary-teal;
-                    text-decoration: underline;
-                }
+                    font-size: 18px;
 
+                    &:after {
+                        visibility: visible;
+                        -webkit-transform: scaleX(1);
+                        transform: scaleX(1);
+                    }
+                }
             }
         }
     }
