--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@ html, body {
   box-sizing: border-box;
   margin: 0;
   font-family: "Roboto", sans-serif;
-  color: #262B2F; }
+  color: #4B4848; }
 
 *, *:before, *:after {
   box-sizing: inherit; }
@@ -31,7 +31,7 @@ header {
       list-style-type: none;
       padding: 5px 0; }
     header nav .nav__list--link {
-      color: #262B2F;
+      color: #4B4848;
       transition: 0.2s;
       text-decoration: none;
       font-weight: 900;
@@ -64,5 +64,21 @@ main {
 
 .wrapper {
   margin: 0 30px; }
+
+.hero-slider {
+  position: relative; }
+
+.slick-arrow {
+  text-decoration: none;
+  color: #fff;
+  font-size: 30px;
+  position: absolute;
+  z-index: 1;
+  top: 46%; }
+  .slick-arrow.slick-next {
+    right: 0;
+    margin-right: 10px; }
+  .slick-arrow.slick-prev {
+    margin-left: 10px; }
 
 /*# sourceMappingURL=main.css.map */
