--- a/css/main.scss
+++ b/css/main.scss
@@ -1,4 +1,5 @@
 $primary: #4B4848;
+$secondary-grey: #cccccc;
 $primary-pink: #ED9582;
 $primary-blue: #004475;
 $primary-green: #204E4A; 
@@ -8,7 +9,8 @@ $cursive-font: 'Yellowtail', cursive;
 $cursive-font2: 'Beth Ellen', cursive;
 $primary-font: 'Roboto', sans-serif;
 $primary-font2: 'Bebas Neue', cursive;
-
+$breakpoint-tablet: 767px;
+$breakpoint-landscape: 1023px;
 
 html, body {
     box-sizing: border-box;
@@ -18,17 +20,27 @@ html, body {
 }
   
 *, *:before, *:after {
-    box-sizing: inherit;
+    box-sizing: border-box;
 }
 
 header {
-    position: fixed;
-    left: 0;
-    top: 0;
-    height: 100%;
-    padding: 20px;
+    
+    // position: fixed;
+    position: relative;
+    margin: 0 20px;
+    padding-right: 16px;
+    padding-top: 20px;
+    // left: 0;
+    // top: 0;
+    // height: 100vh;
+    // margin: 0 20px;
+    // padding-right: 16px;
+    // padding-top: 20px;
+    // border-right: 5px solid rgba(0, 0, 0, 0.07);
+    // overflow-y: scroll;
 
-    .header {
+
+    .heading {
         font-family: $cursive-font;
         margin-top: 0;
         
@@ -39,20 +51,107 @@ header {
             &:hover, 
             &:focus {
                 color: $secondary-teal;
-                font-size: 34px;
             }
         }
     }
 
-    nav {
-        .nav__list {
+    .header {
+        &__hamburger {
+            position: relative;
+            width:35px;
+        
+            &--line {
+                margin: 9px 0;
+                height:3px;
+                width: 100%;
+                background-color: $primary;
+                // margin-bottom: 5px;
+
+                opacity: 1;
+                -webkit-transition: .25s ease-in-out;
+                -moz-transition: .25s ease-in-out;
+                transition: .25s ease-in-out;
+                transform-origin: left center;
+            }
+              
+              &.open div:nth-child(1) {
+                -webkit-transform: rotate(45deg);
+                -moz-transform: rotate(45deg);
+                transform: rotate(45deg);
+              }
+              
+              &.open div:nth-child(2) {
+                width: 0%;
+                opacity: 0;
+              }
+              
+              &.open div:nth-child(3) {
+                -webkit-transform: rotate(-45deg);
+                -moz-transform: rotate(-45deg);
+                transform: rotate(-45deg);
+              }
+        }
+
+        &__wrapper {
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+            position: absolute;
+            left: -200px;
+            transition: 0.5s;
+            z-index: 3;
+            opacity: 0;
+
+            //maybe change z-index on landscape to 0 or normal;
+
+
+    
+
+            &.active {
+                background: white;
+                left: -25px;
+                top: 120px;
+                // bottom: 40%;
+                
+                overflow-y: scroll;
+                width: 70vw;
+                z-index: 3;
+                padding-right: 35px;
+                opacity: 1;
+
+
+                //on ipad need width to be 40vw;
+
+                @media screen and (min-width: $breakpoint-tablet) {
+                    width: 40vw;
+                }
+
+                // on landcape need:
+                // margin: 0 20px;
+                // (but think i need border-right on <header> on landscape
+                // border-right: 5px solid rgba(0, 0, 0, 0.07);
+
+            }
+        }
+    }
+
+    .nav {
+        // flex-grow: 1;
+
+        // position: absolute;
+        // left: -75px;
+        // transition: 0.5s;
+
+        &__list {
             padding-left: 0;
             margin: 0;
             font-size: 16px;
+            position: relative;
 
             &--item {
                 list-style-type: none;
                 padding: 5px 0;
+                text-align: right;
             }
 
             &--link {
@@ -93,18 +192,105 @@ header {
             }
         }
     }
+
+    .footer {
+        display: flex;
+        flex-direction: column;
+        height: 50%;
+        justify-content: flex-end;
+        position: relative;
+
+        &__upper {
+            display: flex;
+            justify-content: flex-end;
+        }
+
+        &__list {
+            display: flex;
+            flex-flow: row wrap;
+            padding-left: 0;
+            text-align: right;
+            width: 50%;
+            justify-content: space-between;
+
+            &--item {
+                list-style-type: none;
+                align-self: stretch;
+
+                a {
+                    color: $primary-teal;
+                }
+            }
+        }
+
+        &__note {
+            font-size: 10px;
+            text-align: right;
+            text-transform: uppercase;
+
+            a {
+                color: $primary;
+                transition: 0.2s;
+                
+                &:hover,
+                &:focus {
+                    color: $secondary-teal;
+                }
+            }
+        }
+        &:before {
+            content: "";
+            position: absolute;
+            bottom: 35%;
+            left: 0;
+            width: 100%;
+            border-bottom: 2px solid rgba(0, 0, 0, 0.07);
+        }
+    }
 }
 
 main {
     padding-top: 25px;
-    margin-left: 220px;
+    position: relative;
+    transition: 0.8s;
+    // on landscape add:
+    // margin-left: 240px;
+
+    &.nav-active {
+        &::after {
+            content: '';
+            height: 100vh;
+            width: 100vw;
+            background-color: rgba(0, 0, 0, 0.5);
+            position: absolute;
+            top: 0;
+            left: 0;
+        }
+    }
 }
 
 .wrapper {
-    margin: 0 30px;
+
+    margin: 0 15px;
+
+    //on landscape:
+    // margin: 0 30px;
 }
 
 // SLICK SLIDER
+
+.hero-carousel {
+
+    &__item {
+        background-repeat: no-repeat; 
+        background-size:cover; 
+        height: 550px;
+        background-position: center;
+
+        //on landscape add:
+        // height: 400px; 
+    }
+}
 
 .hero-slider {
     position: relative;
@@ -116,6 +302,12 @@ main {
     position: absolute;
     z-index: 1;
     top: 46%;
+    transition: 0.2s;
+
+    &:hover,
+    &:focus {
+        color: $secondary-teal;
+    }
 
     &.slick-next {
         right: 0;
@@ -125,5 +317,47 @@ main {
     &.slick-prev {
         margin-left: 10px;
     }
+}
+
+.slick-dots {
+    list-style-type: none;
+    padding: 0;
+    position: relative;
+    margin: 0;
+    margin-top: -30px;
+    z-index: 2;
+    display: flex;
+    justify-content: center;
+
+    > li {
+        display: inline-block;
+        margin-right: 5px;
+
+            &:last-child {
+                margin-right: 0;
+            }
+
+            &.slick-active {
+
+                > button {
+                    background: $secondary-teal;                    
+                }
+                
+            }
+
+        > button {
+            font-size: 0;
+            background-color: white;
+            border: 1px solid $primary-teal;
+            min-height: 20px;
+            min-width: 20px;
+            border-radius: 50%;
+
+            &:focus {
+                outline: none;
+            }            
+        }
+    }
+    
 }
 
