--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,11 @@ header {
   padding-right: 16px;
   padding-top: 20px;
 }
+@media screen and (min-width: 1023px) {
+  header {
+    padding-top: 0;
+  }
+}
 header .heading {
   font-family: "Yellowtail", cursive;
   margin-top: 0;
@@ -27,9 +32,31 @@ header .heading a {
 header .heading a:hover, header .heading a:focus {
   color: #2CD3A9;
 }
+header .heading--desktop {
+  display: none;
+}
+@media screen and (min-width: 1023px) {
+  header .heading--desktop {
+    display: block;
+  }
+}
+header .heading--mobile {
+  display: block;
+}
+@media screen and (min-width: 1023px) {
+  header .heading--mobile {
+    display: none;
+  }
+}
 header .header__hamburger {
   position: relative;
   width: 35px;
+  display: block;
+}
+@media screen and (min-width: 1023px) {
+  header .header__hamburger {
+    display: none;
+  }
 }
 header .header__hamburger--line {
   margin: 9px 0;
@@ -66,6 +93,17 @@ header .header__wrapper {
   z-index: 3;
   opacity: 0;
 }
+@media screen and (min-width: 1023px) {
+  header .header__wrapper {
+    opacity: 1;
+    z-index: 3;
+    position: fixed;
+    left: 0;
+    height: 100%;
+    padding: 20px;
+    border-right: 5px solid rgba(0, 0, 0, 0.07);
+  }
+}
 header .header__wrapper.active {
   background: white;
   left: -25px;
@@ -75,10 +113,16 @@ header .header__wrapper.active {
   z-index: 3;
   padding-right: 35px;
   opacity: 1;
+  display: block;
 }
 @media screen and (min-width: 767px) {
   header .header__wrapper.active {
     width: 40vw;
+  }
+}
+@media screen and (min-width: 1023px) {
+  header .header__wrapper.active {
+    display: none;
   }
 }
 header .nav__list {
@@ -174,6 +218,11 @@ main {
   padding-top: 25px;
   position: relative;
   transition: 0.8s;
+}
+@media screen and (min-width: 1023px) {
+  main {
+    margin-left: 240px;
+  }
 }
 main.nav-active::after {
   content: "";
