--- a/css/main.css
+++ b/css/main.css
@@ -324,4 +324,16 @@ main.nav-active::after {
   outline: none;
 }
 
+.gallery__wrapper {
+  display: flex;
+  flex-flow: row wrap;
+}
+.gallery__item {
+  background-size: cover;
+  width: 32%;
+  height: 400px;
+  margin-right: 12px;
+  margin-bottom: 12px;
+}
+
 /*# sourceMappingURL=main.css.map */
