--- a/css/main.scss
+++ b/css/main.scss
@@ -5,13 +5,19 @@ $primary-blue: #004475;
 $primary-green: #204E4A; 
 $primary-teal: #2D9378;
 $secondary-teal: #2CD3A9;
+$primary-peach: #f2a580;
+$secondary-peach: #f6c3ab;
 $cursive-font: 'Yellowtail', cursive;
 $cursive-font2: 'Beth Ellen', cursive;
 $primary-font: 'Roboto', sans-serif;
 $primary-font2: 'Bebas Neue', cursive;
-$breakpoint-tablet: 767px;
-$breakpoint-landscape: 1023px;
 $gutter: 12px;
+
+////// BREAKPOINTS //////
+$breakpoint-landscape: 666px;
+$breakpoint-tablet: 767px;
+$breakpoint-desktop: 1025px;
+$breakpoint-super: 1550px;
 
 html, body {
     box-sizing: border-box;
@@ -26,20 +32,20 @@ html, body {
 
 .link {
     font-weight: 600;
-    border-bottom: 1px solid $primary-teal;
+    border-bottom: 1px solid $primary-peach;
     text-decoration: none;
     color: $primary;
     transition: 0.2s;
 
     &:hover,
     &:focus {
-        color: $secondary-teal;
+        color: $secondary-peach;
     }
 }
 
 .sub-heading {
     margin-top: 0;
-    border-bottom: 1px solid $primary-teal;
+    border-bottom: 1px solid $primary-peach;
     display: inline;
 }
 
@@ -52,18 +58,29 @@ html, body {
     
 
 .header {
-    position: relative;
-    margin: 0 20px;
+    // position: relative;
+    // margin: 0 20px;
+    // padding-right: 16px;
+    // padding-top: 20px;
+
+    position: fixed;
+    transform: translateZ(0);
+    -webkit-transform: translateZ(0);
     padding-right: 16px;
     padding-top: 20px;
+    padding-bottom: 20px;
+    width: 100%;
+    z-index: 10;
+    background-color: white;
     
     
     &__hamburger {
         position: relative;
-        width:35px;
-        display: block;
+        width: 35px;
+        display: inline-block;
+        margin-left: 20px;
 
-        @media screen and (min-width: $breakpoint-landscape) {
+        @media screen and (min-width: $breakpoint-desktop) {
             display: none;
         }
     
@@ -110,28 +127,27 @@ html, body {
         opacity: 0;
 
         //maybe change z-index on landscape to 0 or normal;
-        @media screen and (min-width: $breakpoint-landscape) {
+        @media screen and (min-width: $breakpoint-desktop) {
             opacity: 1;
             z-index: 3;
             position: fixed;
             left: 0;
-            height: 100%;
+            // height: 100%;
             padding: 20px;
             border-right: 5px solid rgba(0, 0, 0, 0.07);
         }
 
         &.active {
             background: white;
-            left: -25px;
-            top: 120px;
-            // bottom: 40%;
-            
-            overflow-y: scroll;
-            width: 70vw;
-            z-index: 3;
-            padding-right: 35px;
-            opacity: 1;
-            display: block;
+                left: 0px;
+                top: 72px;
+                // bottom: 40%;
+                
+                overflow-y: scroll;
+                width: 100vw;
+                z-index: 3;
+                padding-right: 35px;
+                opacity: 1;
 
 
             //on ipad need width to be 40vw;
@@ -144,7 +160,7 @@ html, body {
             // margin: 0 20px;
             // (but think i need border-right on <header> on landscape
             // border-right: 5px solid rgba(0, 0, 0, 0.07);
-            @media screen and (min-width: $breakpoint-landscape) {
+            @media screen and (min-width: $breakpoint-desktop) {
                 display: none;
             }
         }
@@ -156,28 +172,30 @@ html, body {
     margin-top: 0;
     
     a {
-        color: $primary-teal;
+        color: $primary-peach;
         text-decoration: none;
         transition: 0.2s;
         &:hover, 
         &:focus {
-            color: $secondary-teal;
+            color: $secondary-peach;
         }
     }
 
     &--desktop {
         display: none;
 
-        @media screen and (min-width: $breakpoint-landscape) {
+        @media screen and (min-width: $breakpoint-desktop) {
             display: block;
         }
 
     }
 
     &--mobile {
-        display: block;
+        display: inline;
+        position: absolute;
+        right: 20px;
 
-        @media screen and (min-width: $breakpoint-landscape) {
+        @media screen and (min-width: $breakpoint-desktop) {
             display: none;
         }
     }
@@ -212,7 +230,7 @@ html, body {
                 height: 2px;
                 bottom: 0;
                 left: 0;
-                background-color: $secondary-teal;
+                background-color: $secondary-peach;
                 visibility: hidden;
                 -webkit-transform: scaleX(0);
                 transform: scaleX(0);
@@ -221,13 +239,13 @@ html, body {
             }
 
             &.active {
-                color: $secondary-teal;
+                color: $secondary-peach;
             }
             
 
             &:hover, 
             &:focus {
-                color: $secondary-teal;
+                color: $secondary-peach;
                 font-size: 18px;
 
                 &:after {
@@ -265,7 +283,12 @@ html, body {
             align-self: stretch;
 
             a {
-                color: $primary-teal;
+                color: $primary-peach;
+                transition: 0.2s;
+
+                &:hover {
+                    color: $secondary-peach;
+                }
             }
         }
     }
@@ -281,7 +304,7 @@ html, body {
             
             &:hover,
             &:focus {
-                color: $secondary-teal;
+                color: $secondary-peach;
             }
         }
     }
@@ -302,7 +325,7 @@ main {
     position: relative;
     transition: 0.8s;
 
-    @media screen and (min-width: $breakpoint-landscape) {
+    @media screen and (min-width: $breakpoint-desktop) {
         margin-left: 240px;
     }
 
@@ -328,7 +351,28 @@ main {
     // margin: 0 30px;
 }
 
-// SLICK SLIDER
+.hero-images {
+    display: none;
+
+    @media screen and (min-width: $breakpoint-desktop) { 
+        display: flex;
+        justify-content: center;
+    }
+
+    &__item {
+        width: 30%;
+    
+        > img {
+            max-width: 100%;
+        }
+
+        @media screen and (min-width: $breakpoint-desktop) {
+            flex-flow: row nowrap;
+        }
+    }
+}
+
+// SLICK SLIDER - mobile and tablet
 
 .hero-carousel {
 
@@ -345,7 +389,22 @@ main {
 
 .hero-slider {
     position: relative;
+
+    @media screen and (min-width: $breakpoint-desktop) {
+        display: none;
+    }
 }
+
+.hero-carousel {
+
+    &__item {
+        background-repeat: no-repeat; 
+        background-size:cover; 
+        height: 550px;
+        background-position: center;
+    }
+}
+
 .slick-arrow {
     text-decoration: none;
     color: #fff;
@@ -357,7 +416,7 @@ main {
 
     &:hover,
     &:focus {
-        color: $secondary-teal;
+        color: $secondary-peach;
     }
 
     &.slick-next {
@@ -391,7 +450,7 @@ main {
             &.slick-active {
 
                 > button {
-                    background: $secondary-teal;                    
+                    background: $secondary-peach;                    
                 }
                 
             }
@@ -399,7 +458,7 @@ main {
         > button {
             font-size: 0;
             background-color: white;
-            border: 1px solid $primary-teal;
+            border: 1px solid $primary-peach;
             min-height: 20px;
             min-width: 20px;
             border-radius: 50%;
@@ -429,6 +488,3 @@ main {
         margin-bottom: $gutter;
     }
 }
-
-
-
